--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ First Year/First Semester/Sistem Arhitecture/Labs/Laborator6/peda-session-6.txt
 First Year/First Semester/Sistem Arhitecture/Labs/Laborator6/6
 First Year/First Semester/Sistem Arhitecture/Labs/Laborator6/.gdb_history
 First Year/First Semester/Sistem Arhitecture/Labs/Laborator6/8
+First Year/First Semester/Sistem Arhitecture/Labs/Laborator6/5
