started first prob

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ First Year/First Semester/Sistem Arhitecture/Labs/Laborator6/6
 First Year/First Semester/Sistem Arhitecture/Labs/Laborator6/.gdb_history
 First Year/First Semester/Sistem Arhitecture/Labs/Laborator6/8
 First Year/First Semester/Sistem Arhitecture/Labs/Laborator6/5
+First Year/First Semester/Sistem Arhitecture/Lab Tests/Test 2021/1
