tried something different

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ First Year/First Semester/Sistem Arhitecture/Labs/Laborator6/.gdb_history
 First Year/First Semester/Sistem Arhitecture/Labs/Laborator6/8
 First Year/First Semester/Sistem Arhitecture/Labs/Laborator6/5
 First Year/First Semester/Sistem Arhitecture/Lab Tests/Test 2021/1
+First Year/Second Semester/Data Structures/Lab1/Quick Sort/.vscode/tasks.json
