--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ First Year/First Semester/Sistem Arhitecture/Labs/Laborator6/8
 First Year/First Semester/Sistem Arhitecture/Labs/Laborator6/5
 First Year/First Semester/Sistem Arhitecture/Lab Tests/Test 2021/1
 First Year/Second Semester/Data Structures/Lab1/Quick Sort/.vscode/tasks.json
+First Year/Second Semester/Data Structures/Labs/Lab1/Quick Sort/.idea/modules.xml
+First Year/Second Semester/Data Structures/Labs/Lab1/Quick Sort/.idea/Quick Sort.iml
+First Year/Second Semester/Data Structures/Labs/Lab1/Quick Sort/.idea/vcs.xml
