--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ First Year/Second Semester/Data Structures/Lab1/Quick Sort/.vscode/tasks.json
 First Year/Second Semester/Data Structures/Labs/Lab1/Quick Sort/.idea/modules.xml
 First Year/Second Semester/Data Structures/Labs/Lab1/Quick Sort/.idea/Quick Sort.iml
 First Year/Second Semester/Data Structures/Labs/Lab1/Quick Sort/.idea/vcs.xml
+First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/.idea/2023.02.27.iml
+First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/.idea/dictionaries/skpha.xml
+First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/.idea/inspectionProfiles/Project_Default.xml
+First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/.idea/modules.xml
+First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/.idea/vcs.xml
+First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/main
