changed from it to float

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/.idea/ins
 First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/.idea/modules.xml
 First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/.idea/vcs.xml
 First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/main
+*.xml
