deleted .exe files

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/.idea/mod
 First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/.idea/vcs.xml
 First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/main
 *.xml
+First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/main.exe
+First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/main.exe
+*.exe
