--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/main
 First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/main.exe
 First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/main.exe
 *.exe
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 1/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 1/.idea/Homework 1.iml
