--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,38 @@ First Year/Second Semester/Object-oriented programming/Labs/2023.02.27/main.exe
 *.exe
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 1/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 1/.idea/Homework 1.iml
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/CMakeLists.txt
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeFiles/rules.ninja
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeFiles/CMakeOutput.log
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeFiles/cmake.check_cache
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeFiles/clion-environment.txt
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdC/CMakeCCompilerId.c
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeFiles/3.24.2/CMakeSystem.cmake
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeFiles/3.24.2/CMakeRCCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_CXX.bin
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_C.bin
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeFiles/3.24.2/CMakeCXXCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeFiles/3.24.2/CMakeCCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeFiles/2023_03_10.dir/main.cpp.obj
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/CMakeCache.txt
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/cmake_install.cmake
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/build.ninja
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/.ninja_log
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-5ce3972e36e1d8099afd.json
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/.cmake/api/v1/reply/target-2023_03_10-Debug-42fa83857a7efac305e7.json
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/.cmake/api/v1/reply/index-2023-03-10T10-30-19-0404.json
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-0756b276fc0e7bc7e6e9.json
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-bfa70fb05db434f3e97d.json
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/.cmake/api/v1/reply/cache-v2-c670faac806d36189799.json
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/.cmake/api/v1/query/cache-v2
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/.idea/2023.03.10.iml
+First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/.idea/.name
