--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-bui
 First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-build-debug/.cmake/api/v1/query/cache-v2
 First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/.idea/2023.03.10.iml
 First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/.idea/.name
+First Year/Second Semester/Data Structures/Labs/Homework 1/.idea/Homework 1.iml
