added input/output files

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/cmake-bui
 First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/.idea/2023.03.10.iml
 First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/.idea/.name
 First Year/Second Semester/Data Structures/Labs/Homework 1/.idea/Homework 1.iml
+First Year/Second Semester/Data Structures/Labs/Homework 1/main
