--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/.idea/202
 First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/.idea/.name
 First Year/Second Semester/Data Structures/Labs/Homework 1/.idea/Homework 1.iml
 First Year/Second Semester/Data Structures/Labs/Homework 1/main
+First Year/Second Semester/Data Structures/Labs/Homework 1/.vscode/tasks.json
