--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,35 @@ First Year/Second Semester/Object-oriented programming/Labs/2023.03.10/.idea/.na
 First Year/Second Semester/Data Structures/Labs/Homework 1/.idea/Homework 1.iml
 First Year/Second Semester/Data Structures/Labs/Homework 1/main
 First Year/Second Semester/Data Structures/Labs/Homework 1/.vscode/tasks.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/.idea/.name
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/.idea/Project 1.iml
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/query/cache-v2
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/cache-v2-944ac1f1eb60d0f0ce06.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-6757a81ee057586ac825.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-960f87c3f01c2554598d.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/index-2023-03-13T18-32-28-0809.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/target-Project_1-Debug-27bda5fe6d9c4fc91c60.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-5ce3972e36e1d8099afd.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/build.ninja
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/cmake_install.cmake
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeCache.txt
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/3.24.2/CMakeCCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/3.24.2/CMakeCXXCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_C.bin
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_CXX.bin
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/3.24.2/CMakeRCCompiler.cmake
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/3.24.2/CMakeSystem.cmake
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdC/CMakeCCompilerId.c
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/clion-environment.txt
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/cmake.check_cache
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/CMakeOutput.log
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/rules.ninja
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/CMakeLists.txt
