--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,6 @@ First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-buil
 First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/TargetDirectories.txt
 First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/Testing/Temporary/LastTest.log
 First Year/Second Semester/Object-oriented programming/Labs/Project 1/CMakeLists.txt
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/Project_1.dir/main.cpp.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.ninja_log
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.ninja_deps
