--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,7 @@ First Year/Second Semester/Object-oriented programming/Labs/Project 1/CMakeLists
 First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/Project_1.dir/main.cpp.obj
 First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.ninja_log
 First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/index-2023-03-17T12-45-46-0160.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-ab323c28dbc142bb576c.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/cache-v2-966f73b331a6111f339b.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/Project_1.dir/test.cpp.obj
