made menu for every class

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,4 @@ First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-buil
 First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-ab323c28dbc142bb576c.json
 First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/cache-v2-966f73b331a6111f339b.json
 First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/Project_1.dir/test.cpp.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/index-2023-03-17T16-22-45-0577.json
