added new file with output clear

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,7 @@ First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-buil
 First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/cache-v2-966f73b331a6111f339b.json
 First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/Project_1.dir/test.cpp.obj
 First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/index-2023-03-17T16-22-45-0577.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/CMakeFiles/Project_1.dir/main_clear_output.cpp.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/target-Project_1-Debug-5a7736f6bb28c85696db.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/index-2023-03-19T16-13-23-0447.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-9e4efb44bb941a29db18.json
