started new homework

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,35 @@ First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-buil
 First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/target-Project_1-Debug-5a7736f6bb28c85696db.json
 First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/index-2023-03-19T16-13-23-0447.json
 First Year/Second Semester/Object-oriented programming/Labs/Project 1/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-9e4efb44bb941a29db18.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/.idea/.name
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/.idea/Homework 2.iml
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/query/cache-v2
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/cache-v2-6bd0a5903fb43ff4b65d.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-f55833f87ff3048b762a.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-1b537c0eb0096d295af2.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-03-26T11-18-03-0865.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/target-Homework_2-Debug-3255e449a875265946e1.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-5ce3972e36e1d8099afd.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/build.ninja
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/cmake_install.cmake
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeCache.txt
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeCCompiler.cmake
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeCXXCompiler.cmake
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_C.bin
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_CXX.bin
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeRCCompiler.cmake
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeSystem.cmake
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdC/CMakeCCompilerId.c
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/clion-environment.txt
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/cmake.check_cache
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/CMakeOutput.log
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/rules.ninja
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/CMakeLists.txt
