--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,10 @@ First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-bu
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/TargetDirectories.txt
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/Testing/Temporary/LastTest.log
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/CMakeLists.txt
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/CMakeFiles/Homework_2.dir/main.cpp.obj
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.ninja_log
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/.vscode/settings.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-03-26T12-33-31-0709.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-6a82fd7e94c5f18b95ce.json
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-03-26T13-38-49-0527.json
