new problem added STPAR

--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,5 @@ First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/.vscode/
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-03-26T12-33-31-0709.json
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-6a82fd7e94c5f18b95ce.json
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-03-26T13-38-49-0527.json
+First Year/Second Semester/Data Structures/Seminars/Implementari Seminar 1/.vscode/tasks.json
+First Year/Second Semester/Data Structures/Seminars/Implementari Seminar 1/.vscode/settings.json
