new prob 0 points

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,4 @@ First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-bu
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-03-26T13-38-49-0527.json
 First Year/Second Semester/Data Structures/Seminars/Implementari Seminar 1/.vscode/tasks.json
 First Year/Second Semester/Data Structures/Seminars/Implementari Seminar 1/.vscode/settings.json
+First Year/Second Semester/Data Structures/Seminars/Implementari Seminar 1/tempCodeRunnerFile.cpp
