done class adjustments

--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,17 @@ First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-bu
 First Year/Second Semester/Data Structures/Seminars/Implementari Seminar 1/.vscode/tasks.json
 First Year/Second Semester/Data Structures/Seminars/Implementari Seminar 1/.vscode/settings.json
 First Year/Second Semester/Data Structures/Seminars/Implementari Seminar 1/tempCodeRunnerFile.cpp
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/main.cpp.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/vc140.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Project_2.ilk
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Project_2.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/main.cpp.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/vc140.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Project_2.ilk
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Project_2.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Testing/Temporary/LastTest.log
