solved infinite recursion for cycles

--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,4 @@ First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-buil
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Project_2.ilk
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Project_2.pdb
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-04-05T21-51-59-0936.json
