--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,4 @@ First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-buil
 First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-04-05T21-51-59-0936.json
 First Year/Second Semester/Data Structures/Seminars/Exercises/.idea/Exercises.iml
 First Year/Second Semester/Data Structures/Seminars/Exercises/.idea/Exercises.iml
+First Year/Second Semester/Web Technologies/Labs/Lab7/.idea/Lab7.iml
