added showImg method

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,41 @@ First Year/Second Semester/Formal Language and Automata/Labs/Homework 2/cmake-bu
 First Year/Second Semester/Data Structures/Seminars/Exercises/.idea/Exercises.iml
 First Year/Second Semester/Data Structures/Seminars/Exercises/.idea/Exercises.iml
 First Year/Second Semester/Web Technologies/Labs/Lab7/.idea/Lab7.iml
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-671d093723ef9b3ed3f9.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-eb7742e2d9042122f4cb.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-04-01T10-13-22-0908.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-04-09T18-51-41-0130.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/build.ninja
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_C.bin
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_CXX.bin
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdC/CMakeCCompilerId.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdCXX/CMakeCXXCompilerId.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/clion-environment.txt
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/CMakeOutput.log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/main.cpp.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/vc140.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/ShowIncludes/main.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Project_2.ilk
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Project_2.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-eb7742e2d9042122f4cb.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-04-01T10-13-22-0908.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/build.ninja
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_C.bin
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_CXX.bin
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdC/CMakeCCompilerId.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdCXX/CMakeCXXCompilerId.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/clion-environment.txt
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/CMakeOutput.log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/main.cpp.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/vc140.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/ShowIncludes/main.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Project_2.ilk
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Project_2.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Testing/Temporary/LastTest.log
