added methods for Adjustment and created IOInterface

--- a/.gitignore
+++ b/.gitignore
@@ -226,3 +226,10 @@ First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-buil
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Project_2.ilk
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Project_2.pdb
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Project_2.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Project_2.ilk
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/vc140.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/main.cpp.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_log
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_deps
