done first exercise

--- a/.gitignore
+++ b/.gitignore
@@ -233,3 +233,4 @@ First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-buil
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/CMakeFiles/Project_2.dir/main.cpp.obj
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_log
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Web Technologies/Labs/Lab8/.idea/Lab8.iml
