basic code structure for skip list

--- a/.gitignore
+++ b/.gitignore
@@ -234,3 +234,38 @@ First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-buil
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_log
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.ninja_deps
 First Year/Second Semester/Web Technologies/Labs/Lab8/.idea/Lab8.iml
+First Year/Second Semester/Web Technologies/Labs/Lab8/.idea/workspace.xml.tmp
+First Year/Second Semester/Data Structures/Labs/Homework 2/CMakeLists.txt
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/rules.ninja
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/CMakeOutput.log
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/cmake.check_cache
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/clion-environment.txt
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdCXX/a.out
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdC/CMakeCCompilerId.c
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdC/a.out
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeSystem.cmake
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_CXX.bin
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_C.bin
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeCXXCompiler.cmake
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeCCompiler.cmake
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeCache.txt
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/cmake_install.cmake
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/build.ninja
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-a68c232ca45b00aa6bba.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/target-Homework_2-Debug-5d121bd85facadbb2d26.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-04-18T11-58-23-0348.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-8c5142b0f6d913533951.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-0d5a5d242fe82b673648.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/cache-v2-974f655964d9cad1c34d.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/query/cache-v2
+First Year/Second Semester/Data Structures/Labs/Homework 2/.idea/Homework 2.iml
+First Year/Second Semester/Data Structures/Labs/Homework 2/.idea/.name
+First Year/Second Semester/Data Structures/Labs/Homework 2/.idea/Homework 2.iml
