done insert function and overloaded << >>

--- a/.gitignore
+++ b/.gitignore
@@ -269,3 +269,7 @@ First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cm
 First Year/Second Semester/Data Structures/Labs/Homework 2/.idea/Homework 2.iml
 First Year/Second Semester/Data Structures/Labs/Homework 2/.idea/.name
 First Year/Second Semester/Data Structures/Labs/Homework 2/.idea/Homework 2.iml
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/Homework_2
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/Homework_2.dir/main.cpp.o
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.ninja_log
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.ninja_deps
