--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,26 @@ First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/Hom
 First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/Homework_2.dir/main.cpp.o
 First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.ninja_log
 First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.ninja_deps
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/cache-v2-05d8e2e91a7b8fddacdc.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-3c915c43a2ab387797b1.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-725815fd361ee32f8c86.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-04-21T14-05-19-0014.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/target-Homework_2-Debug-551d387f4c0469ece47b.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-35e626df6e6ffa1819a2.json
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CMakeRCCompiler.cmake
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdC/CMakeCCompilerId.obj
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/3.24.2/CompilerIdCXX/CMakeCXXCompilerId.obj
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/Homework_2.dir/embed.manifest
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/Homework_2.dir/intermediate.manifest
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/Homework_2.dir/main.cpp.obj
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/Homework_2.dir/manifest.rc
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/Homework_2.dir/manifest.res
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/Homework_2.dir/vc140.pdb
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/ShowIncludes/foo.h
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/ShowIncludes/main.c
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMakeFiles/ShowIncludes/main.obj
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/Homework_2.ilk
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/Homework_2.pdb
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Testing/Temporary/LastTest.log
