solved operation 6 problem. 100/100 on infoarena

--- a/.gitignore
+++ b/.gitignore
@@ -296,3 +296,4 @@ First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/CMa
 First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/Homework_2.ilk
 First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/Homework_2.pdb
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/peda-session-unknown.txt
