--- a/.gitignore
+++ b/.gitignore
@@ -297,3 +297,9 @@ First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/Hom
 First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/Homework_2.pdb
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Testing/Temporary/LastTest.log
 First Year/Second Semester/Data Structures/Labs/Homework 2/cmake-build-debug/peda-session-unknown.txt
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.cmake/api/v1/reply/index-2023-04-21T19-12-56-0860.json
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/.cmake/api/v1/reply/cache-v2-7bd6d29a482e5570db65.json
+First Year/Second Semester/Databases/Labs/DataGrip Test/.idea/dataSources/84243d0a-11d7-4ae3-9432-26dc31f58ab9/storage_v2/_src_/schema/SYSTEM.L2avkg.meta
+First Year/Second Semester/Databases/Labs/DataGrip Test/.idea/dataSources/84243d0a-11d7-4ae3-9432-26dc31f58ab9/storage_v2/_src_/schema/SYS.rUIBAA.meta
+First Year/Second Semester/Databases/Labs/DataGrip Test/.idea/dataSources/84243d0a-11d7-4ae3-9432-26dc31f58ab9/storage_v2/_src_/schema/GRUPA32.2veaPA.zip
+First Year/Second Semester/Databases/Labs/DataGrip Test/.idea/dataSources/84243d0a-11d7-4ae3-9432-26dc31f58ab9/storage_v2/_src_/schema/GRUPA32.2veaPA.meta
