arbori de intervale

--- a/.gitignore
+++ b/.gitignore
@@ -303,3 +303,5 @@ First Year/Second Semester/Databases/Labs/DataGrip Test/.idea/dataSources/84243d
 First Year/Second Semester/Databases/Labs/DataGrip Test/.idea/dataSources/84243d0a-11d7-4ae3-9432-26dc31f58ab9/storage_v2/_src_/schema/SYS.rUIBAA.meta
 First Year/Second Semester/Databases/Labs/DataGrip Test/.idea/dataSources/84243d0a-11d7-4ae3-9432-26dc31f58ab9/storage_v2/_src_/schema/GRUPA32.2veaPA.zip
 First Year/Second Semester/Databases/Labs/DataGrip Test/.idea/dataSources/84243d0a-11d7-4ae3-9432-26dc31f58ab9/storage_v2/_src_/schema/GRUPA32.2veaPA.meta
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Data Structures/Labs/Lab4/.vscode/settings.json
