tried implementation with double linked list

--- a/.gitignore
+++ b/.gitignore
@@ -307,3 +307,9 @@ First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-buil
 First Year/Second Semester/Data Structures/Labs/Lab4/.vscode/settings.json
 First Year/Second Semester/Data Structures/Labs/Homework 3/.vscode/settings.json
 First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Data Structures/Labs/Homework 3/deque.obj
+First Year/Second Semester/Object-oriented programming/Labs/Project 2/cmake-build-debug/Testing/Temporary/LastTest.log
+First Year/Second Semester/Data Structures/Labs/Homework 3/vc140.pdb
+First Year/Second Semester/Data Structures/Labs/Homework 3/deque.pdb
+First Year/Second Semester/Data Structures/Labs/Homework 3/deque.obj
+First Year/Second Semester/Data Structures/Labs/Homework 3/.idea/Homework 3.iml
