--- a/.gitignore
+++ b/.gitignore
@@ -313,3 +313,4 @@ First Year/Second Semester/Data Structures/Labs/Homework 3/vc140.pdb
 First Year/Second Semester/Data Structures/Labs/Homework 3/deque.pdb
 First Year/Second Semester/Data Structures/Labs/Homework 3/deque.obj
 First Year/Second Semester/Data Structures/Labs/Homework 3/.idea/Homework 3.iml
+First Year/Second Semester/Data Structures/Labs/Homework 3/deque2.obj
