done until exercise 4

--- a/.gitignore
+++ b/.gitignore
@@ -316,3 +316,4 @@ First Year/Second Semester/Data Structures/Labs/Homework 3/.idea/Homework 3.iml
 First Year/Second Semester/Data Structures/Labs/Homework 3/deque2.obj
 First Year/Second Semester/Databases/Project/~WRL0848.tmp
 First Year/Second Semester/Databases/Project/~$2_Mincu_AdrianLucian-proiect.docx
+First Year/Second Semester/Databases/Project/~WRL0005.tmp
